--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                 }
 
                 // color by label
-                let color = '#A41623'; // default (避難)
-                if (/醫療|hospital|clinic/i.test(label)) color = '#1f77b4';
-                if (/飲水|water/i.test(label)) color = '#2ca02c';
+                let color = '#2ca02c'; // default (避難)
+                if (/醫療|hospital|clinic/i.test(label)) color = '#A41623';
+                if (/飲水|water/i.test(label)) color = '#1f77b4';
 
                 const marker = new mapboxgl.Marker({ color })
                     .setLngLat([lng, lat])
